# quickrun

./: .gitignore  CMakeLists.txt  README.md  build_rk3588_yolov5.sh  build_rv1103.sh  clean_all.sh  logo_README.md  main.cc  test_rk3588_yolov5.sh
getusbdevice/: find_usbdevice.cpp  find_usbdevice.h
kernel/include/: core.h
kernel/src/: core.cpp  main.cpp
libv4l2/: capture.cpp  libv4l2.h  v4l2_wrap.cpp
mpp/encode/: CMakeLists.txt  cmakelist.txt  drm.h  jpg2yuv.cpp  libv4l2.h  mpp_frame.h  mpp_log.h  utils.cpp
queue/: static_q.cpp  static_q.h
yolov5/include/: drm_func.h  postprocess.h  rga_func.h
yolov5/src/: main.cpp  postprocess.cpp
